# picovision-projects

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
bubbles/: CMakeLists.txt  README.md  main.cpp
edid-display/: CMakeLists.txt  README.md  edid-decode.c  main.cpp
fire/: CMakeLists.txt  README.md  main.cpp
gol/: CMakeLists.txt  README.md  main.cpp
mandel/: CMakeLists.txt  README.md  main.cpp  mandelbrot.c  mandelbrot.h
micropython/pong-wars/: pong_wars.py
micropython/pong_wars/: pong_wars.py
spincube/: CMakeLists.txt  README.md  main.cpp
